[project]
name = "crombird_reddit"
version = "1.0.0"
description = "Reddit bot for Crom (u/The-Paranoid-Android)"
requires-python = ">=3.12"
dependencies = [
    "praw>=7.8.1",
    "marko>=2.2.1",
    "timeago>=1.0.16",
    "prometheus-client>=0.23.1",
    "requests-oauthlib>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyrefly>=0.46.1",
    "types-oauthlib>=3.3.0",
    "types-requests-oauthlib>=2.0.0",
]

[tool.pyrefly]
project-includes = ["**/*.py*"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
